Testimonial Part Done

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <meta content="" name="keywords">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-    <link rel="manifest" href="assets/img/site.webmanifest">
+    <link rel="manifest" href="assets/img/site.webmanifest"> -->
 
 
     <!-- Google Fonts -->
@@ -183,6 +183,56 @@
             </div>
         </div>
     </section>
+
+
+
+<br><br><br>
+
+<section style="background-color: #F4F5F7;">
+    <div class="testimonial">
+        <h3 class="title1">Our Clients Speak</h3><br>
+        <h6 class="description1">We have been working with clients in India</h6>
+    </div>
+<br><br>
+    <div style="max-width: 75%;margin:auto;" class="row">
+
+        <div class="col-md-4 text-center">
+            <div class="maining">
+                <h3 class="test1">Efficient Collaborating</h3>
+                <h6 class="test2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem.</h6>
+            </div><br>
+           <img style="height:55px;" src="assets/img/testimonial.png"><br>
+           <h5 class="nametest">Jane Cooper</h5>
+           <h6 class="nametest1">CEO at ABC Corporation</h6>
+        </div><br><br>
+
+        <div class="col-md-4 text-center">
+            <div class="maining">
+                <h3 class="test1">Efficient Collaborating</h3>
+                <h6 class="test2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem.</h6>
+            </div><br>
+           <img style="height:55px;" src="assets/img/testimonial.png"><br>
+           <h5 class="nametest">Jane Cooper</h5>
+           <h6 class="nametest1">CEO at ABC Corporation</h6>
+        </div><br><br>
+
+        <div class="col-md-4 text-center">
+            <div class="maining">
+                <h3 class="test1">Efficient Collaborating</h3>
+                <h6 class="test2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem.</h6>
+            </div><br>
+           <img style="height:55px;" src="assets/img/testimonial.png"><br>
+           <h5 class="nametest">Jane Cooper</h5>
+           <h6 class="nametest1">CEO at ABC Corporation</h6>
+        </div><br><br>
+
+    </div>
+
+
+
+</section>
+
+
 
 
 
