setting the count part

--- a/about.html
+++ b/about.html
@@ -74,15 +74,19 @@
       <h1>Some counts that matter</h1>
       <p>Our achievement in the journey depicted in the numbers.</p>
       <div class="row" id="row-3">
-        <div class="col-sm-4" id="vertical-line">
+        <div class="col-sm-3" id="vertical-line">
           <h1>5</h1>
           <p>Lorem ipsum</p>
         </div>
-        <div class="col-sm-4" id="vertical-line">
+        <div class="col-sm-3" id="vertical-line">
           <h1>30</h1>
           <p>Lorem ipsum</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3" id="vertical-line">
+          <h1>300</h1>
+          <p>Lorem ipsum</p>
+        </div>
+        <div class="col-sm-3">
           <h1>300</h1>
           <p>Lorem ipsum</p>
         </div>
