--- a/Footer.html
+++ b/Footer.html
@@ -18,6 +18,15 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"
   ></script>
+  <style>
+    .anchor {
+      color: black;
+      text-decoration: none;
+    }
+    .anchor:hover {
+      color: aliceblue;
+    }
+  </style>
   <body>
     <div class="container-fluid" id="container-footer">
       <div class="row">
@@ -46,21 +55,21 @@
         <div class="col-sm-3">
           <h4 class="fs-2" id="our-company-head">Our Company</h4>
           <ul>
-            <li>Home</li>
-            <li>About Us</li>
-            <li>How it Works</li>
-            <li>Pricing</li>
-            <li>Become Career Counsellor</li>
-            <li>Book session with Expert</li>
-            <li>Contact Us</li>
+            <a href="0" class="anchor"><li>Home</li></a>
+            <a href="0" class="anchor"><li>About Us</li></a>
+            <a href="0" class="anchor"> <li>How it Works</li></a>
+            <a href="0" class="anchor"><li>Pricing</li></a>
+            <a href="0" class="anchor"><li>Become Career Counsellor</li></a>
+            <a href="0" class="anchor"><li>Book session with Expert</li></a>
+            <a href="0" class="anchor"><li>Contact Us</li></a>
           </ul>
         </div>
         <div class="col-sm-3">
           <h4 class="fs-2" id="policies">Policies</h4>
           <ul>
-            <li>Privacy Policy</li>
-            <li>Refund Policy</li>
-            <li>Terms & Conditions</li>
+            <a href="0" class="anchor"> <li>Privacy Policy</li></a>
+            <a href="0" class="anchor"> <li>Refund Policy</li> </a>
+            <a href="0" class="anchor"> <li>Terms & Conditions</li></a>
           </ul>
         </div>
         <div class="col-sm-3">
@@ -77,11 +86,17 @@
       <div class="last-line">
         <div class="row">
           <div class="col-sm-6">
-            <span id="copyright">©2020 Ladder Guru . All rights reserved</span>
+            <a href="0" class="anchor">
+              <span id="copyright"
+                >©2020 Ladder Guru . All rights reserved</span
+              ></a
+            >
           </div>
           <div class="col-sm-6">
-            <span id="tnc"
-              >Terms & Conditions | Privacy Policy | Disclaimer</span
+            <a href="0" class="anchor"
+              ><span id="tnc"
+                >Terms & Conditions | Privacy Policy | Disclaimer</span
+              ></a
             >
           </div>
         </div>
