--- a/about.html
+++ b/about.html
@@ -36,6 +36,9 @@
       </p>
       <hr />
     </div>
+
+
+
     <div class="container" id="container-2">
       <div class="row">
         <div class="col-sm-4">
@@ -71,8 +74,8 @@
       </div>
     </div>
     <div class="container text-center" id="cont">
-      <h1>Some counts that matter</h1>
-      <p>Our achievement in the journey depicted in the numbers.</p>
+      <h1 class="countshead">Some counts that matter</h1>
+      <p class="countshead2">Our achievement in the journey depicted in the numbers.</p>
       <div class="row" id="row-3">
         <div class="col-sm-3" id="vertical-line">
           <h1>5</h1>
