--- a/index.html
+++ b/index.html
@@ -52,12 +52,88 @@
             margin-top: 0px;
             background: #2C3779;
             border-radius: 40px;
-            padding: 20px 40px;
+            padding: 10px 40px;
             border: 0px solid #EF946C;
             width: fit-content;
             color: #ffffff;
             font-size: 12px;
         }
+
+        #container-footer {
+  background-color: #06b2c5;
+  width: 100%;
+  height: 700px;
+  padding: 80px;
+}
+@media screen and (max-width: 600px) {
+  #container-footer {
+    height: 1500px;
+    width: 115%;
+  }
+}
+@media screen and (max-width: 600px) {
+  #container-footer {
+    margin: auto;
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 800px) {
+  #container-footer {
+    height: 1500px;
+    width: 115%;
+  }
+}
+.logo-para {
+  margin-top: 10px;
+}
+#icon {
+  text-decoration: none;
+  padding: 5px;
+}
+.logo {
+  margin-right: 5rem;
+}
+#icons {
+  margin-top: 2rem;
+  margin-right: 2rem;
+}
+li {
+  list-style: none;
+  line-height: 38px;
+}
+#our-company-head {
+  margin-bottom: 2rem;
+}
+#policies {
+  margin-bottom: 2rem;
+}
+#reach-us {
+  margin-bottom: 2rem;
+}
+#tnc {
+  margin-right: 8rem;
+  float: right;
+}
+#copyright {
+  color: rgba(95, 87, 32, 0.756);
+  margin-left: 8rem;
+}
+.last-line {
+  margin-top: 5rem;
+}
+@media screen and (max-width: 600px) {
+  #copyright {
+    margin-left: 0rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .last-line {
+    width: 100%;
+  }
+}
+.anchor{
+  color: black;;
+}
     </style>
 </head>
 
@@ -72,18 +148,18 @@
             <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
                 <a href="index.html" class="logo d-flex align-items-center">
-                    <img class="img-fluid" style="width: 150px;height: auto;" src="assets/img/logo.svg" alt="">
+                    <img class="img-fluid" style="width: 200px;height: auto;" src="assets/img/logo.svg" alt="">
                 </a>
 
                 <div class="nav justify-content-center">
                     <nav id="navbar" class="navbar ">
                         <ul>
-                            <li><a class="nav-link scrollto" href="#frontend">Home</a></li>
-                            <li><a class="nav-link scrollto" href="#about">About me</a></li>
-                            <li><a class="nav-link scrollto" href="#experience">How It Works</a></li>
-                            <li><a class="nav-link scrollto" href="#design">Pricing</a></li>
-                            <li><a class="nav-link scrollto" href="#design">Webinar</a></li>
-                            <li><a class="nav-link scrollto" href="#design">Contact Us</a></li>
+                            <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+                            <li><a class="nav-link scrollto" href="about.html">About us</a></li>
+                            <li><a class="nav-link scrollto" href="#hiw">How It Works</a></li>
+                            <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+                            <li><a class="nav-link scrollto" href="#webinar">Webinar</a></li>
+                            <li><a class="nav-link scrollto" href="contact.html">Contact Us</a></li>
 
                             <li><a class="nav-link scrollto">
                                     <div> <button class="mybutton" type="submit">Book Career Counselling</button></div>
@@ -287,10 +363,13 @@
 <br><br><br><br><br><br>
     </main>
 
+    <footer>
+
+
     <div class="container-fluid" id="container-footer">
         <div class="row">
           <div class="col-sm-3">
-            <a href="/"><img src="./image/Ladder 1.svg" alt="logo-image" /></a>
+            <a href="/"><img class="img-fluid" src="./image/Ladder 1.svg" alt="logo-image" /></a>
             <p class="logo-para">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
               sunt expedita, optio vel, soluta aliquid a ut iusto dolor velit nisi
@@ -364,7 +443,7 @@
 
 
 
-
+    </footer>
 
 
 
