--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ li {
 
     
 
-    <section class="howitworks">
+    <section id="hiw" class="howitworks">
         <div style="text-align: center;margin: auto;max-width: 100%;"> 
             <h2 style="font-weight: 700;">How it Works</h2><br>
             <h6 style="font-weight: 400;color: #767D86;font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis platea tempus suspendisse eget.Lorem ipsum dolor sit amet, 
@@ -310,7 +310,7 @@ li {
 
 
 
-<div class="container text-center cont" >
+<div id="pricing" class="container text-center cont" >
     <h1 class="countshead">Some counts that matter</h1>
     <p class="countshead2">Our achievement in the journey depicted in the numbers.</p>
     <div class="row" id="row-3">
