--- a/Footer.html
+++ b/Footer.html
@@ -28,10 +28,32 @@
     }
   </style>
   <body>
+    <div class="text-center" id="newsletter-1">
+      <div class="row" id="row">
+        <div class="col-md-6" id="row-1"></div>
+        <div class="col-md-6" id="row-2">
+          Join Our Newsletter to get <br />
+          the latest updates.
+          <br /><br />
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="your work email address"
+              aria-label="Recipient's username"
+              aria-describedby="basic-addon2"
+            />
+            <span class="input-group-text" id="basic-addon2"
+              >Join the waitlist</span
+            >
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container-fluid" id="container-footer">
       <div class="row">
         <div class="col-sm-3">
-          <a href="/"><img src="./image/Ladder 1.svg" alt="logo-image" /></a>
+          <a href="/"><img src="Ladder 1.svg" alt="logo-image" /></a>
           <p class="logo-para">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
             sunt expedita, optio vel, soluta aliquid a ut iusto dolor velit nisi
