--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 
     <!-- Vendor CSS Files -->
@@ -185,8 +186,10 @@ li {
                             style="color: #233862;">Career Counselling </a>Platform</h2>
                     <br>
                     <h1 class="textsallhome" data-aos="fade-up">
-                        <element style="color: #ffffff;font-family: 'Raleway', sans-serif;
-                            font-weight: initial;">
+                        <element style="color: #ffffff;
+                        font-weight: initial;
+                        font-family: 'Poppins', sans-serif;
+                        line-height: 26px;">
                             India's largest space where Dreams meet destination We help you make<br> informed choices at
                             every step of your career!
                     </h1>
@@ -195,7 +198,7 @@ li {
             </div>
             <br><br><br>
             <div style="text-align: center;">
-                <img class="img-fluid" style="width: 900px;" src="assets/img/main.svg">
+                <img class="img-fluid" style="width: 800px;" src="assets/img/main.svg">
             </div>
 
 
@@ -232,7 +235,11 @@ li {
     <section id="hiw" class="howitworks">
         <div style="text-align: center;margin: auto;max-width: 100%;"> 
             <h2 style="font-weight: 700;">How it Works</h2><br>
-            <h6 style="font-weight: 400;color: #767D86;font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis platea tempus suspendisse eget.Lorem ipsum dolor sit amet, 
+            <h6 style="font-weight: 300;
+            color: #767D86;
+            font-size: 16px;
+            line-height: 23px;
+            font-family: 'poppins';">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis platea tempus suspendisse eget.Lorem ipsum dolor sit amet, 
                 consectetur adipiscing elit. Sagittis platea tempus suspendisse eget.</h6>
         </div>
         <br><br><br><br>
@@ -265,7 +272,7 @@ li {
 <section style="background-color: #F4F5F7;">
     <div class="testimonial">
         <h3 class="title1">Our Clients Speak</h3><br>
-        <h6 class="description1">We have been working with clients in India</h6>
+        <h6 style="font-family: 'poppins';font-weight: 300;" class="description1">We have been working with clients in India</h6>
     </div>
 <br><br>
     <div style="max-width: 75%;margin:auto;" class="row">
