--- a/about.html
+++ b/about.html
@@ -48,6 +48,12 @@
     <link href="about.css" rel="stylesheet">
 
     <style>
+      .about-us--subhead{
+        font-family: "Raleway";
+      }
+      p{
+        font-family: "Poppins";
+      }
         .mybutton {
             margin-top: 0px;
             background: #2C3779;
@@ -131,10 +137,15 @@ li {
     width: 100%;
   }
 }
+@media screen and (max-width: 600px) {
+  #box {
+    margin-top: 2rem;
+  }
+}
 .anchor{
   color: black;;
 }
-    </style>
+</style>
 </head>
 
 <body>
