--- a/about.html
+++ b/about.html
@@ -48,6 +48,12 @@
     <link href="about.css" rel="stylesheet">
 
     <style>
+      
+    a {
+      text-decoration: none;
+      color: aliceblue;
+    }
+
       .about-us--subhead{
         font-family: "Raleway";
       }
@@ -351,11 +357,10 @@ li {
               >
             </div>
             <div class="col-sm-6">
-              <a href="0" class="anchor"
-                ><span id="tnc"
-                  >Terms & Conditions | Privacy Policy | Disclaimer</span
-                ></a
-              >
+              <span id="tnc"
+                ><a href="assets/pdfs/Terms & Conditions (10).docx">Terms & Conditions </a> |<a href="assets/pdfs/Privacy Policy (11).docx">Privacy Policy</a>
+                |<a href="assets/pdfs/Refund Policy (1).docx"> Refund Policy</a>
+              </span>
             </div>
           </div>
         </div>
