--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,12 @@
     <link href="about.css" rel="stylesheet">
 
     <style>
+      
+    a {
+      text-decoration: none;
+      color: aliceblue;
+    }
+
         .mybutton {
             margin-top: 0px;
             background: #2C3779;
@@ -386,11 +392,10 @@ button {
               >
             </div>
             <div class="col-sm-6">
-              <a href="0" class="anchor"
-                ><span id="tnc"
-                  >Terms & Conditions | Privacy Policy | Disclaimer</span
-                ></a
-              >
+              <span id="tnc"
+                ><a href="assets/pdfs/Terms & Conditions (10).docx">Terms & Conditions </a> |<a href="assets/pdfs/Privacy Policy (11).docx">Privacy Policy</a>
+                |<a href="assets/pdfs/Refund Policy (1).docx"> Refund Policy</a>
+              </span>
             </div>
           </div>
         </div>
