--- a/Footer.html
+++ b/Footer.html
@@ -19,11 +19,8 @@
     crossorigin="anonymous"
   ></script>
   <style>
-    .anchor {
-      color: black;
+    a {
       text-decoration: none;
-    }
-    .anchor:hover {
       color: aliceblue;
     }
   </style>
@@ -115,11 +112,13 @@
             >
           </div>
           <div class="col-sm-6">
-            <a href="0" class="anchor"
-              ><span id="tnc"
-                >Terms & Conditions | Privacy Policy | Disclaimer</span
-              ></a
-            >
+            <span id="tnc"
+              ><a href="assets/pdfs/Terms & Conditions (10).docx"
+                >Terms & Conditions
+              </a>
+              |<a href="assets/pdfs/Privacy Policy (11).docx">Privacy Policy</a>
+              |<a href="assets/pdfs/Refund Policy (1).docx"> Refund Policy</a>
+            </span>
           </div>
         </div>
       </div>
