--- a/index.html
+++ b/index.html
@@ -66,78 +66,8 @@
             font-size: 12px;
         }
 
-        #container-footer {
-  background-color: #06b2c5;
-  width: 100%;
-  height: 700px;
-  padding: 80px;
-}
-@media screen and (max-width: 600px) {
-  #container-footer {
-    height: 1500px;
-    width: 115%;
-  }
-}
-@media screen and (max-width: 600px) {
-  #container-footer {
-    margin: auto;
-    max-width: 100%;
-  }
-}
-@media screen and (max-width: 800px) {
-  #container-footer {
-    height: 1500px;
-    width: 115%;
-  }
-}
-.logo-para {
-  margin-top: 10px;
-}
-#icon {
-  text-decoration: none;
-  padding: 5px;
-}
-.logo {
-  margin-right: 5rem;
-}
-#icons {
-  margin-top: 2rem;
-  margin-right: 2rem;
-}
-li {
-  list-style: none;
-  line-height: 38px;
-}
-#our-company-head {
-  margin-bottom: 2rem;
-}
-#policies {
-  margin-bottom: 2rem;
-}
-#reach-us {
-  margin-bottom: 2rem;
-}
-#tnc {
-  margin-right: 8rem;
-  float: right;
-}
-#copyright {
-  color: rgba(95, 87, 32, 0.756);
-  margin-left: 8rem;
-}
-.last-line {
-  margin-top: 5rem;
-}
-@media screen and (max-width: 600px) {
-  #copyright {
-    margin-left: 0rem;
-  }
-}
-@media screen and (max-width: 600px) {
-  .last-line {
-    width: 100%;
-  }
-}
+
+
 .anchor{
   color: black;;
 }
@@ -155,7 +85,7 @@ li {
             <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
                 <a href="index.html" class="logo d-flex align-items-center">
-                    <img class="img-fluid" style="width: 200px;height: auto;" src="assets/img/logo.svg" alt="">
+                    <img class="img-fluid" style="width: 130px;height: auto;padding: 10px;" src="assets/img/logo.svg" alt="">
                 </a>
 
                 <div class="nav justify-content-center">
@@ -212,14 +142,14 @@ li {
                 <div class="row">
                     <div class="col-md-5">
                         <div class="col-auto">
-                            <label for="inputPassword2" class="visually-hidden">Password</label>
-                            <input type="password" class="form-control" id="inputPassword2" placeholder="Name">
+                            <label for="inputPassword2" class="visually-hidden">Name</label>
+                            <input type="text" class="form-control" id="inputPassword2" placeholder="Name">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="col-auto">
-                            <label for="inputPassword2" class="visually-hidden">Password</label>
-                            <input type="password" class="form-control" id="inputPassword2" placeholder="Phone Number">
+                            <label for="inputPassword2" class="visually-hidden">Phone Number</label>
+                            <input type="number" class="form-control" id="inputPassword2" placeholder="Phone Number">
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -373,16 +303,56 @@ li {
 </div>
 
 
-<br><br><br><br><br><br>
+<br><br><br>
+
+
+<div class="jumbotron joinwait">
+<div class="row">
+  <div style="text-align-last:center;" class="col-md-4">
+    <img class="img-fluid" width="170px" src="assets/img/iconmail.svg">
+  </div>
+  <div class="col-md-8">
+  <h3 class="latestupdate">Join Our Newsletter and get <br>the latest updates .</h3>
+  <br>
+  <div class="input-group mb-3">
+    <input   type="text"   class="form-control" placeholder="your work email address" aria-label="Recipient's username"  aria-describedby="basic-addon2"  />
+    <span class="input-group-text" id="basic-addon2" >Join the waitlist</span>
+
+  </div>
+  </div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br><br><br>
+
+
+
+
     </main>
+
 
     <footer>
 
 
-    <div class="container-fluid" id="container-footer">
+  
+
+
+      <div class="container-fluid" id="container-footer">
         <div class="row">
           <div class="col-sm-3">
-            <a href="/"><img class="img-fluid" src="./image/Ladder 1.svg" alt="logo-image" /></a>
+            <a href="/"><img src="Ladder 1.svg" alt="logo-image" /></a>
             <p class="logo-para">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
               sunt expedita, optio vel, soluta aliquid a ut iusto dolor velit nisi
@@ -445,14 +415,17 @@ li {
             </div>
             <div class="col-sm-6">
               <span id="tnc"
-                ><a href="assets/pdfs/Terms & Conditions (10).docx">Terms & Conditions </a> |<a href="assets/pdfs/Privacy Policy (11).docx">Privacy Policy</a>
+                ><a href="assets/pdfs/Terms & Conditions (10).docx"
+                  >Terms & Conditions
+                </a>
+                |<a href="assets/pdfs/Privacy Policy (11).docx">Privacy Policy</a>
                 |<a href="assets/pdfs/Refund Policy (1).docx"> Refund Policy</a>
               </span>
             </div>
           </div>
         </div>
       </div>
-
+  
 
 
     </footer>
