--- a/contact.html
+++ b/contact.html
@@ -169,56 +169,55 @@ button {
 </head>
 
 <body>
-    <section
-        style="background-image: url(assets/img/background.svg);background-repeat: no-repeat;background-size:cover;background-color: #07B2C5;border-radius: 22px;
-        border: 13px solid white;">
+
+  <section
+  style="background-image: url(assets/img/background.svg);background-repeat: no-repeat;background-size:cover;background-color: #07B2C5;">
 
 
 
-        <!-- ======= Header ======= -->
-        <header id="header" class="header fixed-top">
-            <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+  <!-- ======= Header ======= -->
+  <header id="header" class="header fixed-top">
+      <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-                <a href="index.html" class="logo d-flex align-items-center">
-                    <img class="img-fluid" style="width: 200px;height: auto;" src="assets/img/logo.svg" alt="">
-                </a>
+          <a href="index.html" class="logo d-flex align-items-center">
+              <img class="img-fluid" style="width: 150px;height: auto;" src="assets/img/logo.svg" alt="">
+          </a>
 
-                <div class="nav justify-content-center">
-                    <nav id="navbar" class="navbar ">
-                        <ul>
-                            <li><a class="nav-link scrollto" href="index.html">Home</a></li>
-                            <li><a class="nav-link scrollto" href="about.html">About us</a></li>
-                            <li><a class="nav-link scrollto" href="#hiw">How It Works</a></li>
-                            <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-                            <li><a class="nav-link scrollto" href="#webinar">Webinar</a></li>
-                            <li><a class="nav-link scrollto" href="contact.html">Contact Us</a></li>
+          <div class="nav justify-content-center">
+              <nav id="navbar" class="navbar ">
+                  <ul>
+                      <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+                      <li><a class="nav-link scrollto" href="about.html">About us</a></li>
+                      <li><a class="nav-link scrollto" href="#hiw">How It Works</a></li>
+                      <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+                      <li><a class="nav-link scrollto" href="#webinar">Webinar</a></li>
+                      <li><a class="nav-link scrollto" href="contact.html">Contact Us</a></li>
 
-                            <li><a class="nav-link scrollto">
-                                    <div> <button class="mybutton" type="submit">Book Career Counselling</button></div>
-                                </a></li>
+                      <li><a class="nav-link scrollto">
+                              <div> <button class="mybutton" type="submit">Book Career Counselling</button></div>
+                          </a></li>
 
-                        </ul>
-                        <i class="bi bi-list mobile-nav-toggle"></i>
-                    </nav>
-                </div><!-- .navbar -->
+                  </ul>
+                  <i class="bi bi-list mobile-nav-toggle"></i>
+              </nav>
+          </div><!-- .navbar -->
 
-            </div>
-        </header><!-- End Header -->
+      </div>
+  </header><!-- End Header -->
 
-        <div style="margin: auto;max-width: 90%;margin-top: 80px;" class="row">
-          <div class="col-md-3">
-            <h2 style="color:white;">Contact Us</h2>
-            <p style="color:white;">LADDER GURU</p>
-          </div>
-          <div class="col-md-9">
-            <p style="color:white;"> Lorem ipsum dolor sit amet consectetur. Volutpat tellus at facilisi commodo platea. Cras leo et justo orci nec turpis. Mollis sapien morbi a id cursus. In est bibendum ornare ut magna feugiat id.Lorem ipsum dolor sit amet consectetur.
-               Volutpat tellus at facilisi commodo platea. Cras leo et justo orci nec turpis. Mollis sapien morbi a id cursus. In est bibendum ornare ut magna feugiat id.</p>
-            </div>
+  <div style="margin: auto;max-width: 90%;margin-top: 80px;" class="row">
+    <div class="col-md-3">
+      <h2 style="color:white;font-weight: 500;font-family: 'Poppins';">Contact Us</h2>
+      <p style="color:white;">LADDER GURU</p>
+    </div>
+    <div class="col-md-9">
+      <p style="color:white;"> Lorem ipsum dolor sit amet consectetur. Volutpat tellus at facilisi commodo platea. Cras leo et justo orci nec turpis. Mollis sapien morbi a id cursus. In est bibendum ornare ut magna feugiat id.Lorem ipsum dolor sit amet consectetur.
+         Volutpat tellus at facilisi commodo platea. Cras leo et justo orci nec turpis. Mollis sapien morbi a id cursus. In est bibendum ornare ut magna feugiat id.</p>
+      </div>
 
-        </div>
+  </div>
 
 </section>
-
 
         <br> <br> 
 
