--- a/contact.html
+++ b/contact.html
@@ -67,78 +67,7 @@
             font-size: 12px;
         }
 
-        #container-footer {
-  background-color: #06b2c5;
-  width: 100%;
-  height: 700px;
-  padding: 80px;
-}
-@media screen and (max-width: 600px) {
-  #container-footer {
-    height: 1500px;
-    width: 115%;
-  }
-}
-@media screen and (max-width: 600px) {
-  #container-footer {
-    margin: auto;
-    max-width: 100%;
-  }
-}
-@media screen and (max-width: 800px) {
-  #container-footer {
-    height: 1500px;
-    width: 115%;
-  }
-}
-.logo-para {
-  margin-top: 10px;
-}
-#icon {
-  text-decoration: none;
-  padding: 5px;
-}
-.logo {
-  margin-right: 5rem;
-}
-#icons {
-  margin-top: 2rem;
-  margin-right: 2rem;
-}
-li {
-  list-style: none;
-  line-height: 38px;
-}
-#our-company-head {
-  margin-bottom: 2rem;
-}
-#policies {
-  margin-bottom: 2rem;
-}
-#reach-us {
-  margin-bottom: 2rem;
-}
-#tnc {
-  margin-right: 8rem;
-  float: right;
-}
-#copyright {
-  color: rgba(95, 87, 32, 0.756);
-  margin-left: 8rem;
-}
-.last-line {
-  margin-top: 5rem;
-}
-@media screen and (max-width: 600px) {
-  #copyright {
-    margin-left: 0rem;
-  }
-}
-@media screen and (max-width: 600px) {
-  .last-line {
-    width: 100%;
-  }
-}
+
 .anchor{
   color: black;;
 }
@@ -206,7 +135,7 @@ button {
   </header><!-- End Header -->
 
   <div style="margin: auto;max-width: 90%;margin-top: 80px;" class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 mastername">
       <h2 style="color:white;font-weight: 500;font-family: 'Poppins';">Contact Us</h2>
       <p style="color:white;">LADDER GURU</p>
     </div>
