--- a/form1.html
+++ b/form1.html
@@ -174,7 +174,7 @@
         <br> <br> 
 
         
-    <div class="container shadow-lg" style="margin-top: 10rem; padding: rem">
+    <div class="container shadow-lg" style="margin-top: 10rem; padding: 1rem">
       <h3>Personal Details</h3>
 
       <div class="row">
