--- a/form2.html
+++ b/form2.html
@@ -105,11 +105,12 @@
     @media screen and (max-width: 600px) {
       .form2-img {
         margin-top: 1rem;
+        margin-left: 2rem;
       }
     }
     @media screen and (max-width: 600px) {
       .container {
-        height: 1100px;
+        height: 900px;
       }
     }
 </style>
@@ -177,17 +178,17 @@
             <div class="col-md-4">
               <a href=""
                 ><img class="form2-img" src="./forms image/form2-img-1.svg" alt=""
-              /></a>
+                height="180rem"/></a>
             </div>
             <div class="col-md-4">
               <a href=""
                 ><img class="form2-img" src="./forms image/form2-img-2.svg" alt=""
-              /></a>
+                height="180rem"/></a>
             </div>
             <div class="col-md-4">
               <a href=""
                 ><img class="form2-img" src="./forms image/form2-img-3.svg" alt=""
-              /></a>
+                height="180rem"/></a>
             </div>
           </div>
         </div>
@@ -210,7 +211,7 @@
             </p>
             <p id="icons">
               <a id="icon" href=""
-                ><img src="./image/Social Icons.svg" alt="" />
+                ><img src="./image/Social Icons.svg" alt=""  />
               </a>
               <a id="icon" href=""
                 ><img src="./image/Social Icons (1).svg" alt="" />
