--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       <div class="container-fluid" id="container-footer">
         <div class="row">
           <div class="col-sm-3">
-            <a href="/"><img src="Ladder 1.svg" alt="logo-image" /></a>
+            <a href="/"><img src="assets/img/logo.svg" alt="logo-image" /></a>
             <p class="logo-para">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
               sunt expedita, optio vel, soluta aliquid a ut iusto dolor velit nisi
